--- a/site/hestia/src/app/views/user-nav/user-nav.component.html
+++ b/site/hestia/src/app/views/user-nav/user-nav.component.html
@@ -1,6 +1,6 @@
-<div class="content">
+<div class="content" *ngIf="user">
     <header>
-        <h1>Welcome {{ user.name }}</h1>
+        <h1>{{ user.name }}</h1>
     </header>
     <div class="container">
         <nav class="nav">
